tests/NormalTests/paczka1/small_fuzzy/40972463.err
Error in line 1: crXHKONi S953 30,6
Error in line 8: zxJluBJRVa S461 47,3
Error in line 10: zxJluBJRVa S953 68,1
